--- a/test.html
+++ b/test.html
@@ -6,6 +6,8 @@
 	<h5>HELLO!!!</h5>
 	<h1>AAAHHHRRRGH!!!</h1>
 	<p> WTF is this!?</p>
+	<p> This is a practice web page</p>
+	<p>C'mon don't boolsh*t me!</p>
 </body>
 </html>
 
